--- a/SCHOTT.WinForms Library.nuspec
+++ b/SCHOTT.WinForms Library.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>SCHOTT.WinForms</id>
-		<version>1.0.0</version>
+		<version>1.0.1</version>
 		<title>SCHOTT.WinForms Library</title>
 		<authors>jgvicke</authors>
 		<owners>jgvicke</owners>
@@ -11,11 +11,11 @@
 		<iconUrl>https://avatars0.githubusercontent.com/u/23213816?v=3&amp;s=200</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>Core functions for Windows Forms used by SCHOTT products.</description>
-		<releaseNotes>Initial Release</releaseNotes>
+		<releaseNotes>Bug Fix: Updated dependency on SCHOTT.Core library to deal with different versions of .Net</releaseNotes>
 		<copyright>Copyright 2016</copyright>
 		<tags>SCHOTT WinForms</tags>
 		<dependencies>
-			<dependency id="SCHOTT.Core" version="1.0.0" />
+			<dependency id="SCHOTT.Core" version="1.0.2" />
 			<dependency id="DockPanelSuite" version="2.13.0" />
 		</dependencies>
 	</metadata>
